[package]
name = "fat-fuse"
version = "0.1.0"
authors = ["Steven Tang <steven.yc.tang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", default-features = false }
fuse = "0.3.1"
time = { version = "0.1.38", default-features = false }
libc = "0.2.66"
chrono = { version = "0.4.10", default-features = false }
lib_fat = { path = "./lib_fat" }
