[package]
name = "fat-fuse"
version = "0.1.0"
authors = ["Steven Tang <yc@steventang.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", default-features = false, features = ["std"] }
fuser = "0.13.0"
time = { version = "0.3.28", default-features = false }
libc = "0.2.148"
lib_fat = { path = "./lib_fat" }
